<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/tema"
        app:iconSpaceReserved="false">
        <ListPreference
            app:iconSpaceReserved="false"
            android:entries="@array/modos_ui"
            android:entryValues="@array/modos_ui_values"
            android:key="theme"
            android:title="@string/theme_mode" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/categories"
        app:iconSpaceReserved="false">
        <ListPreference
            app:iconSpaceReserved="false"
            android:entries="@array/portadas_categories"
            android:entryValues="@array/portadas_category_keys"
            android:key="init_category"
            android:title="@string/initial_category" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notifications"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="daily_notification"
            android:summary="@string/daily_notification_summary"
            android:title="@string/daily_notification_title" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
