<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:contentDescription="appIcon"
            app:srcCompat="@mipmap/news_icon"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/app_full_name"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.Portadas.AppTitle" />
    </LinearLayout>

    <TextView
        android:id="@+id/appVersion"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="4sp"
        android:text="@string/about_desc"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/contact"
        style="@style/Widget.Material3.Button.TonalButton.Icon"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        app:icon="@drawable/ic_contact_mail_black_24dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <TextView
        android:id="@+id/mas_apps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:text="@string/mas_apps" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/portadas_revistas"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/portadas_revistas"
        android:textStyle="bold"
        app:icon="@mipmap/magazines_icon"
        app:iconSize="32dp"
        app:iconTint="@null" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/appSource"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/appSource"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="4sp"
            android:text="@string/copyright"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:autoLink="web"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="4sp"
            android:linksClickable="true"
            android:text="@string/privacy_policy"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />


    </LinearLayout>

</LinearLayout>